deleted all split files, reverted back

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -11,11 +11,6 @@ GEN_CMDS__FLAG :=
 
 ORDERED_OBJS += \
 "./main.obj" \
-"./rebuscan.obj" \
-"./rebuspid.obj" \
-"./rebuspwm.obj" \
-"./rebusqei.obj" \
-"./rebustimer.obj" \
 "./tm4c123gh6pm_startup_ccs.obj" \
 "../tm4c123gh6pm.cmd" \
 $(GEN_CMDS__FLAG) \
@@ -161,8 +156,8 @@ qei_mit_pwm.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(BIN_OUTPUTS__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "main.obj" "rebuscan.obj" "rebuspid.obj" "rebuspwm.obj" "rebusqei.obj" "rebustimer.obj" "tm4c123gh6pm_startup_ccs.obj" 
-	-$(RM) "main.d" "rebuscan.d" "rebuspid.d" "rebuspwm.d" "rebusqei.d" "rebustimer.d" "tm4c123gh6pm_startup_ccs.d" 
+	-$(RM) "main.obj" "tm4c123gh6pm_startup_ccs.obj" 
+	-$(RM) "main.d" "tm4c123gh6pm_startup_ccs.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
